-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.3, 5.9.2
-
Windows 8.1
-
57e3935db685879f72fbd388b9d8d850f6424e79 (5.6.4), cacf666f95df9790cebf5d5cdb0609cee257fab3 (5.9.3)
QAxServer: m_spInPlaceSite is expected to be an IOleInPlaceSiteWindowless interface, but is incorrectly initialized as it is initialized as an IOleInPlaceSite. This causes problems later on because it tries to use a function that is only available in IOleInPlaceSiteWindowless.
For Gerrit Dashboard: QTBUG-63903 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
208715,5 | Get the right interface type for m_spInPlaceSite | 5.9 | qt/qtactiveqt | Status: MERGED | +2 | 0 |
209611,2 | Get the right interface type for m_spInPlaceSite | 5.6 | qt/qtactiveqt | Status: MERGED | +2 | 0 |